--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <div class="container" id="scrollContainer">
-      <!-- first section   -->
+
+      <!-- first section , whole screen image  -->
       <section>
         <div class="complete_container container_card">
           <img src="./assets/image_1.png" alt="image" />
@@ -20,6 +21,8 @@
       <!-- second section  -->
       <section>
         <div class="container_card section_padding">
+
+           <!-- second section inside text   -->
           <div class="second_section_inside_card">
             <div class="text_inside_any_card">
               <p class="text_uppercase">Lorem ipsum, amet consectetur</p>
@@ -37,77 +40,100 @@
               </p>
             </div>
           </div>
+          <!-- second section inside text end  -->
+
+          <!-- second section first image  -->
           <img
-            class="second_container_first_image"
-            src="./assets/jockey_blur.png"
-            alt="jockey blur"
+          class="second_container_first_image"
+          src="./assets/jockey_blur.png"
+          alt="jockey blur"
           />
+          <!-- second section first image end -->
+
+          <!-- second section second image  -->
           <img
-            class="second_container_second_image"
-            src="./assets/image_3.png"
-            alt="image"
+          class="second_container_second_image"
+          src="./assets/image_3.png"
+          alt="image"
           />
+          <!-- second section second image end -->
         </div>
       </section>
 
-      <!-- third section  -->
+      <!-- third section , whole screen image -->
       <section>
         <div class="complete_container container_card">
           <img src="./assets/Full_Screen_Polo_GIF.gif" alt="full screen gif" />
         </div>
       </section>
 
-      <!-- fourth section  -->
+      <!-- fourth section, this is long section  -->
       <section class="long_section">
         <div class="container_card">
           <!-- inside fourth create a square box with postion relative   -->
           <div class="fourth_section_inside_div">
+
+            <!-- fourth section inside first text   -->
             <div class="fourth_section_inside_card">
-              <div class="text_inside_any_card right_float">
+                <div class="text_inside_any_card right_float">
+                    <p class="blue_title_underline">the polo trunk</p>
+                    <p class="inside_card_normal_para_text">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. In
+                        accusamus quas voluptas officiis velit quasi perferendis vel
+                        beatae, magni eaque.
+                    </p>
+                </div>
+            </div>
+            <!-- fourth section inside first text end  -->
+
+            <!-- fourth section first image   -->
+            <img
+            class="fourth_section_first_image"
+            src="./assets/image_4.png"
+            alt="image"
+            />
+            <!-- fourth section first image end  -->
+
+            <!-- fourth section second image  -->
+            <img
+            class="fourth_section_second_image"
+            src="./assets/image_5.png"
+            alt="image"
+            />
+            <!-- fourth section second image end -->
+
+            <!-- fourth section inside second text  -->
+            <div class="text_inside_any_card fourth_section_other_info_text">
                 <p class="blue_title_underline">the polo trunk</p>
                 <p class="inside_card_normal_para_text">
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. In
-                  accusamus quas voluptas officiis velit quasi perferendis vel
-                  beatae, magni eaque.
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. In
+                    accusamus quas voluptas officiis velit quasi perferendis vel
+                    beatae, magni eaque.
                 </p>
-              </div>
             </div>
-            <img
-              class="fourth_section_first_image"
-              src="./assets/image_4.png"
-              alt="image"
-            />
-            <img
-              class="fourth_section_second_image"
-              src="./assets/image_5.png"
-              alt="image"
-            />
-            <div class="text_inside_any_card fourth_section_other_info_text">
-              <p class="blue_title_underline">the polo trunk</p>
-              <p class="inside_card_normal_para_text">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. In
-                accusamus quas voluptas officiis velit quasi perferendis vel
-                beatae, magni eaque.
-              </p>
-            </div>
+            <!-- fourth section inside second text end -->
           </div>
           <!-- inside fourth create a square box with postion relative end here   -->
 
+          <!-- fourth section third image  -->
           <img
-            class="fourth_section_third_image"
-            src="./assets/image_6.png"
-            alt="image"
+          class="fourth_section_third_image"
+          src="./assets/image_6.png"
+          alt="image"
           />
+          <!-- fourth section third image end -->
 
+          <!-- fourth section fourth image gif  -->
           <img
-            class="fourth_section_fourth_image"
-            src="./assets/HANDLE_GIF_POLO_TRUNK.gif"
-            alt="gif"
+          class="fourth_section_fourth_image"
+          src="./assets/HANDLE_GIF_POLO_TRUNK.gif"
+          alt="gif"
           />
+          <!-- fourth section fourth image gif end -->
         </div>
       </section>
 
-      <!-- fifth section  -->
+      <!-- fifth section, this is long section  -->
       <section class="long_section">
         <div class="container_card">
             <!-- fifth first image  -->
